@@ -1,5 +1,8 @@
 2011-04-21  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclInt.h:	Use macro to set List intreps.
+	* generic/tclListObj.c:
+
 	* generic/tclCmdIL.c:	Limits on list length were too strict.
 	* generic/tclInt.h:	Revised panics to errors where possible.
 	* generic/tclListObj.c:
